--- a/Uncorked/contact.html
+++ b/Uncorked/contact.html
@@ -19,7 +19,7 @@
 			<h5>Join Our List to<br>
 				Receive Email Updates!</h5>
 			<form method="post" action="https://app.icontact.com/icp/signup.php" name="subscribeForm" id="subscribeForm" accept-charset="UTF-8" onsubmit="return verifyRequired1715();">
-				<input type="hidden" name="redirect" value="http://www.rewinedcandles.com/">
+				<input type="hidden" name="redirect" value="http://www.uncorkedcandles.com/">
 				<input type="hidden" name="errorredirect" value="http://www.icontact.com/www/signup/error.html">
 				<input type="hidden" name="listid" value="16756">
 				<input type="hidden" name="specialid:16756" value="JD6B">
